fix: update z-index for header fixed element to prevent overlap with sticky elements

--- a/src/parts/header-fixed/header-fixed.scss
+++ b/src/parts/header-fixed/header-fixed.scss
@@ -27,7 +27,7 @@ body.with-header-fixed
 	inset-inline-end: 0;
 	left: 0;
 	right: 0;
-	z-index: 1;
+	z-index: 100; //must be higher than wp sticky elements with z-index 10
 	width: 100%;
 	transform: translateY(0);
 	transition: transform 0.25s ease;
